--- a/etc/reference.html
+++ b/etc/reference.html
@@ -231,7 +231,6 @@
 <h3 id="youtube-channel"><a class="header" href="#youtube-channel">Youtube Channel</a></h3>
 <ul>
 <li><a href="https://www.youtube.com/c/CGArtistAcademy">CGArtistAcademy</a></li>
-<li><a href="https://www.youtube.com/channel/UCvuT2bzBB0kzne16DBAtmLQ">Simon Houdini</a></li>
 <li><a href="https://www.youtube.com/c/LoveDo">LoveDo</a></li>
 <li><a href="https://www.youtube.com/channel/UCnLGDYYL_6LcUT3TMSNdvSA">c0d2x</a></li>
 <li><a href="https://www.youtube.com/c/MotionDesignersCommunityTV">MotionDesignersCommunityTV</a></li>
@@ -250,7 +249,30 @@
 <li><a href="https://www.patreon.com/cgside">https://www.patreon.com/cgside</a></li>
 </ul>
 </li>
-<li><a href="https://www.youtube.com/@IndiePixel3D">IndiePixel3D</a></li>
+</ul>
+<h2 id="p"><a class="header" href="#p">P</a></h2>
+<ul>
+<li>
+<p><a href="https://www.youtube.com/@IndiePixel3D">IndiePixel3D</a></p>
+<ul>
+<li>https://www.sidefx.com/profile/IndiePixel/</li>
+</ul>
+</li>
+<li>
+<p>Simon Verstraete</p>
+<ul>
+<li>https://www.youtube.com/@simonhoudini5074</li>
+<li>https://www.artstation.com/siver</li>
+</ul>
+</li>
+<li>
+<p>Radu Cius</p>
+<ul>
+<li>https://www.youtube.com/@RaduCius</li>
+<li>https://www.artstation.com/raducius/store?tab=digital_product</li>
+<li>https://rart.gumroad.com/</li>
+</ul>
+</li>
 </ul>
 <h2 id="책"><a class="header" href="#책">책</a></h2>
 <ul>
@@ -311,6 +333,7 @@
 <li><a href="https://anopara.gumroad.com/l/ngKUJ">https://anopara.gumroad.com/l/ngKUJ</a></li>
 </ul>
 </li>
+<li>https://www.pluralsight.com/courses/houdini-engine-unity-fundamentals</li>
 </ul>
 <h2 id=""><a class="header" href="#">???</a></h2>
 <ul>
