deploy: 980155ac0b7a4296f2269cccad3e4cbc64e78514

--- a/control/config.html
+++ b/control/config.html
@@ -190,6 +190,8 @@
 <h2 id="환경변수"><a class="header" href="#환경변수">환경변수</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>Env</th><th></th></tr></thead><tbody>
 <tr><td>$HIP</td><td>hip 파일이 저장된 절대경로</td></tr>
+<tr><td>$JOB</td><td>project 절대경로</td></tr>
+<tr><td>HOUDINI_OTLSCAN_PATH</td><td></td></tr>
 </tbody></table>
 </div><div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>Aliases and Variables...</td><td>Alt+Shift+V</td></tr>
