--- a/control/key.html
+++ b/control/key.html
@@ -231,6 +231,9 @@
 </tbody></table>
 </div>
 <h2 id="object-view"><a class="header" href="#object-view">Object View</a></h2>
+<ul>
+<li>https://www.sidefx.com/docs/houdini/network/wire.html</li>
+</ul>
 <div class="table-wrapper"><table><thead><tr><th>Object View</th><th></th></tr></thead><tbody>
 <tr><td>Y</td><td>가위자르기</td></tr>
 <tr><td>P</td><td>프로퍼티 보기</td></tr>
@@ -239,10 +242,13 @@
 <tr><td>Z</td><td>노드 모양 // Ctrl + 드래그로 기본 노드 모양 변경 가능</td></tr>
 <tr><td>C</td><td>노드 색깔 // Ctrl + 드래그로 기본 노드 색깔 변경 가능</td></tr>
 <tr><td>정렬</td><td>노드 선택후 A키 누른상태에서 아래로 (https://siver.artstation.com/blog/zORm/houdini-blog-22-tips-and-tricks)</td></tr>
-<tr><td>Shift + S</td><td>wiring style change: rounded &lt;-&gt; straight</td></tr>
-<tr><td>Shift + L</td><td>Layout 정렬</td></tr>
+<tr><td>Shift + S</td><td>선 스타일 바꾸기 // wiring style change: rounded &lt;-&gt; straight</td></tr>
+<tr><td>Shift + R</td><td><em>입력 순서 교체</em></td></tr>
+<tr><td>Shift + L</td><td><em>Layout 정렬</em></td></tr>
+<tr><td>Shift + Z</td><td>그룹보기</td></tr>
 <tr><td>Shift + O</td><td>Network Box</td></tr>
 <tr><td>Shift + P</td><td>Sticky 노트</td></tr>
+<tr><td>Ctrl + I</td><td>Background Images: Enable/Disable    // Shift + I 혹은 Labs &gt; Sticker Placer</td></tr>
 <tr><td>Alt</td><td>이음 노드 추가</td></tr>
 <tr><td>Q/B</td><td>노랑색 Bypass</td></tr>
 <tr><td>W</td><td>진한 보라색</td></tr>
@@ -250,6 +256,8 @@
 <tr><td>R</td><td>파랑색 선택된것들 돌아가며 선택</td></tr>
 </tbody></table>
 </div>
+<h2 id="keyframe"><a class="header" href="#keyframe">Keyframe</a></h2>
+<p>alt</p>
 <h2 id="ref"><a class="header" href="#ref">Ref</a></h2>
 <ul>
 <li><a href="https://www.sidefx.com/docs/houdini/network/flags.html">네트워크상 키</a></li>
