--- a/file/file.html
+++ b/file/file.html
@@ -184,6 +184,7 @@
 <tr><td>씬파일</td><td>.hip</td><td>Houdini Independent Package</td></tr>
 <tr><td></td><td>.hipnc</td><td>Houdini Independent Package Non-Commercial</td></tr>
 <tr><td>에셋</td><td>.hda</td><td>Houdini Digital Assets</td></tr>
+<tr><td></td><td>.hdalc</td><td>Houdini Digital Assets limited commercial</td></tr>
 </tbody></table>
 </div>
                     </main>
