--- a/file/hda.html
+++ b/file/hda.html
@@ -181,9 +181,25 @@
                     <main>
                         <h1 id="hda"><a class="header" href="#hda">HDA</a></h1>
 <p>Houdini Digital Assets</p>
+<div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
+<tr><td>저장</td><td>Save Node Type</td></tr>
+<tr><td>락 풀기</td><td>Allow Editing of Contents</td></tr>
+<tr><td>락 걸기</td><td>Match Current Definition (주의 Revert와 같은거. Save Node Type 필수)</td></tr>
+<tr><td>속성 편집</td><td>Type Properties  (주의 Edit Parameter Interface는 HDA가 아닌 해당 노드만 수정함)</td></tr>
+</tbody></table>
+</div>
 <ul>
-<li><a href="https://www.youtube.com/watch?v=eS1Zob0NWbY">Introduction to HDA (Houdini Digital Asset) in Unreal Engine UE4 &amp; Houdini for Beginners</a></li>
-<li><a href="https://www.youtube.com/playlist?list=PLd959VTYXCB551P4atiY52iA14JyLsaI7">Foundation Module - All Lecture Series</a>
+<li>
+<p>파라미터 필드 추가 단축키</p>
+<ul>
+<li>alt + 마우스 중간 쿨릭</li>
+</ul>
+</li>
+<li>
+<p><a href="https://www.youtube.com/watch?v=eS1Zob0NWbY">Introduction to HDA (Houdini Digital Asset) in Unreal Engine UE4 &amp; Houdini for Beginners</a></p>
+</li>
+<li>
+<p><a href="https://www.youtube.com/playlist?list=PLd959VTYXCB551P4atiY52iA14JyLsaI7">Foundation Module - All Lecture Series</a></p>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=xz3Vvy5X58U">HOUDINI 101 - 09 - Digital Assets &amp; Unreal</a></li>
 <li><a href="https://ehoudiniacademy.com/foundation/">https://ehoudiniacademy.com/foundation/</a></li>
