--- a/game-engine/unity.html
+++ b/game-engine/unity.html
@@ -199,6 +199,205 @@
 <li>
 <p>유니티 엔진에서 후디니 엔진과 통신하는 것이므로 에디트모드일때만 동작한다.</p>
 </li>
+<li>
+<p>https://www.sidefx.com/docs/houdini/unity/attributes.html</p>
+</li>
+<li>
+<p>https://www.sidefx.com/docs/houdini/unity/meshes.html</p>
+</li>
+<li>
+<p>https://www.sidefx.com/docs/houdini/unity/instancing.html</p>
+</li>
+</ul>
+<h2 id=""><a class="header" href="#"></a></h2>
+<div class="table-wrapper"><table><thead><tr><th>attr</th><th></th></tr></thead><tbody>
+<tr><td>unity_instance</td><td>point찍고 attr에 프리팝 경로 입력하면 알아서 생성해줌</td></tr>
+</tbody></table>
+</div>
+<h2 id="learn--learning-paths--unity"><a class="header" href="#learn--learning-paths--unity"><a href="https://www.sidefx.com/learn/unity">Learn &gt; Learning Paths &gt; Unity</a></a></h2>
+<h3 id="start-here"><a class="header" href="#start-here">START HERE</a></h3>
+<ul>
+<li><a href="https://www.sidefx.com/tutorials/unity-starter-kit/">UNITY STARTER KIT</a>
+<ul>
+<li>여러 툴들 소계</li>
+</ul>
+</li>
+<li><a href="https://www.sidefx.com/tutorials/getting-started-with-houdini-engine-for-unity/">GETTING STARTED WITH HOUDINI ENGINE FOR UNITY</a>
+<ul>
+<li>육각형 지형, HDA 생성, unity_instance</li>
+<li>Attribute Create</li>
+<li>Attribute Randomize</li>
+</ul>
+</li>
+<li><a href="https://www.sidefx.com/tutorials/houdini-engine-for-unity-instancing/">HOUDINI ENGINE FOR UNITY | INSTANCING &amp; VARIATION</a>
+<ul>
+<li>Scatter and Align 로 뿌려넣고 unity_instance로 소환</li>
+<li>Attribute Randomize
+<ul>
+<li>Options / Global Seed</li>
+</ul>
+</li>
+<li>Parameter Description / Type: String / Tags / TagName: heuassetpath 로 엔진파라미터로 프리팹 받을 수 있도록 설정.</li>
+</ul>
+</li>
+<li><a href="https://www.sidefx.com/tutorials/houdini-engine-for-unity-session-sync/">HOUDINI ENGINE FOR UNITY | SESSION SYNC</a>
+<ul>
+<li>https://www.sidefx.com/docs/houdini/ref/panes/enginesessionsync.html</li>
+<li>Houdini &gt; New Pane Tab Type &gt; Misc &gt; Houdini Engine SessionSync &gt; Start</li>
+<li>Unity &gt; Houdini Engine &gt; Session Sync &gt; Connect to Houdini</li>
+<li>유니티에서 hda 불러오면, 후디니에서도 보기 가능</li>
+<li>유니티에서 New Node를 생성하면, 후디니에서도 생성됨. 후디니에서 편집가능.
+<ul>
+<li>유니티에서 Save Node로 저장하면 .hess(<code>H</code>oudini <code>E</code>ngine <code>S</code>ession<code>S</code>ync)</li>
+<li>유니티에서 Load NodeSync로 불러오기 가능.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="https://www.sidefx.com/tutorials/games-quickstart/">GAMES QUICKSTART</a>
+<ul>
+<li>간단한 모델링, 그루핑, 어트리뷰트, HDA, Curve</li>
+<li>Desktop 설정</li>
+<li>단축키 C
+<ul>
+<li><a href="https://www.sidefx.com/tutorials/hotkeys/">HOTKEYS</a></li>
+</ul>
+</li>
+<li>node
+<ul>
+<li>Poly Extrude</li>
+<li>Poly Bevel</li>
+<li>Poly Split</li>
+<li>Bend</li>
+<li>Edit</li>
+<li>Fuse</li>
+<li>Resample</li>
+<li>Copy To Point</li>
+<li>Orientation Along Curve // Curve에서 각도 유지
+<ul>
+<li>파라미터 조정을 통해 사슬과 같은 효과를 낼 수 있다.</li>
+</ul>
+</li>
+<li>Copy To Curve == Orientation Along Curve + Copy To Point</li>
+<li>Draw Curve // 축 기반으로 그리거나, 매쉬에 그릴 수 있음.</li>
+<li>Match Size // 중점 이동</li>
+<li>Trace // Traces curves from an image file or heightfield.</li>
+</ul>
+</li>
+<li>Group
+<ul>
+<li>Group</li>
+<li>Group by Range // with Tube, Poly Extrude</li>
+<li>Group Combine</li>
+<li>Group Promote</li>
+</ul>
+</li>
+<li>Attribute
+<ul>
+<li>Attribute Create</li>
+<li>Attribute Noise // Cd, scale, N, pscale</li>
+<li>Attribute Randomize</li>
+<li>Attribute Promote</li>
+</ul>
+</li>
+<li>6 | MAKE GAME-READY ASSETS
+<ul>
+<li>1
+<ul>
+<li>File</li>
+<li>Labs Game Res // Reduce, Auto UV, Bake</li>
+<li>ROP FBX Output</li>
+</ul>
+</li>
+<li>2
+<ul>
+<li>Poly Reduce</li>
+<li>Auto UV</li>
+<li>Soften Normals</li>
+<li>Labs Map Baker</li>
+</ul>
+</li>
+<li>블록 모서리 깍인 효과
+<ul>
+<li>Attribute Noise - pscale</li>
+<li>Poly Bevel
+<ul>
+<li>Ignore Flat Edges</li>
+<li>Scale By Attribute</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="https://www.sidefx.com/tutorials/houdini-digital-assets/">HOUDINI DIGITAL ASSETS</a>
+<ul>
+<li>사슬
+<ul>
+<li>Draw Curve - Resample - CopyToCurve
+<ul>
+<li>Apply Yaw
+<ul>
+<li>Yaw: 90</li>
+</ul>
+</li>
+<li>Apply Roll or Twist
+<ul>
+<li>Full Twists: 7</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>팬스
+<ul>
+<li>노드
+<ul>
+<li>output, color</li>
+<li>Point Jitter로 변형 (crooked)</li>
+<li>Poly Bevel - Round</li>
+<li>Attribute Noise - scale 로 높이조정</li>
+<li>Attribute Noise - N 로 흩으러짐(회전) 효과</li>
+<li>Distance Along Geometry
+<ul>
+<li>Output Mask로 Ramp값을 할당</li>
+</ul>
+</li>
+<li>Attribute VOP
+<ul>
+<li>Import Point Attribute - mask</li>
+<li>변형주고 scale에 할당.</li>
+</ul>
+</li>
+<li>Labs Color Gradient로 y축 기반 색상 지정.</li>
+<li>Copy To Curve
+<ul>
+<li>Target Type: Next Edge로 이어진 팬스</li>
+<li>Target Up Vector 조절로 뒤집힘 방지.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>HDA
+<ul>
+<li>Parameter</li>
+<li>Match Current Definition</li>
+</ul>
+</li>
+<li>vex: ch</li>
+</ul>
+</li>
+<li>Type Properties &gt; Node &gt; Guide Geometry
+<ul>
+<li>가이드라인으로 와이어 프레임으로 보여짐.</li>
+<li>Switch추가로 Toggle하여 사용</li>
+</ul>
+</li>
+</ul>
+</li>
 </ul>
 
                     </main>
