--- a/print.html
+++ b/print.html
@@ -233,6 +233,9 @@
 </tbody></table>
 </div>
 <h2 id="object-view"><a class="header" href="#object-view">Object View</a></h2>
+<ul>
+<li>https://www.sidefx.com/docs/houdini/network/wire.html</li>
+</ul>
 <div class="table-wrapper"><table><thead><tr><th>Object View</th><th></th></tr></thead><tbody>
 <tr><td>Y</td><td>가위자르기</td></tr>
 <tr><td>P</td><td>프로퍼티 보기</td></tr>
@@ -241,10 +244,13 @@
 <tr><td>Z</td><td>노드 모양 // Ctrl + 드래그로 기본 노드 모양 변경 가능</td></tr>
 <tr><td>C</td><td>노드 색깔 // Ctrl + 드래그로 기본 노드 색깔 변경 가능</td></tr>
 <tr><td>정렬</td><td>노드 선택후 A키 누른상태에서 아래로 (https://siver.artstation.com/blog/zORm/houdini-blog-22-tips-and-tricks)</td></tr>
-<tr><td>Shift + S</td><td>wiring style change: rounded &lt;-&gt; straight</td></tr>
-<tr><td>Shift + L</td><td>Layout 정렬</td></tr>
+<tr><td>Shift + S</td><td>선 스타일 바꾸기 // wiring style change: rounded &lt;-&gt; straight</td></tr>
+<tr><td>Shift + R</td><td><em>입력 순서 교체</em></td></tr>
+<tr><td>Shift + L</td><td><em>Layout 정렬</em></td></tr>
+<tr><td>Shift + Z</td><td>그룹보기</td></tr>
 <tr><td>Shift + O</td><td>Network Box</td></tr>
 <tr><td>Shift + P</td><td>Sticky 노트</td></tr>
+<tr><td>Ctrl + I</td><td>Background Images: Enable/Disable    // Shift + I 혹은 Labs &gt; Sticker Placer</td></tr>
 <tr><td>Alt</td><td>이음 노드 추가</td></tr>
 <tr><td>Q/B</td><td>노랑색 Bypass</td></tr>
 <tr><td>W</td><td>진한 보라색</td></tr>
@@ -252,6 +258,8 @@
 <tr><td>R</td><td>파랑색 선택된것들 돌아가며 선택</td></tr>
 </tbody></table>
 </div>
+<h2 id="keyframe"><a class="header" href="#keyframe">Keyframe</a></h2>
+<p>alt</p>
 <h2 id="ref"><a class="header" href="#ref">Ref</a></h2>
 <ul>
 <li><a href="https://www.sidefx.com/docs/houdini/network/flags.html">네트워크상 키</a></li>
@@ -267,6 +275,8 @@
 <h2 id="환경변수"><a class="header" href="#환경변수">환경변수</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>Env</th><th></th></tr></thead><tbody>
 <tr><td>$HIP</td><td>hip 파일이 저장된 절대경로</td></tr>
+<tr><td>$JOB</td><td>project 절대경로</td></tr>
+<tr><td>HOUDINI_OTLSCAN_PATH</td><td></td></tr>
 </tbody></table>
 </div><div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>Aliases and Variables...</td><td>Alt+Shift+V</td></tr>
@@ -288,12 +298,29 @@
 <tr><td>씬파일</td><td>.hip</td><td>Houdini Independent Package</td></tr>
 <tr><td></td><td>.hipnc</td><td>Houdini Independent Package Non-Commercial</td></tr>
 <tr><td>에셋</td><td>.hda</td><td>Houdini Digital Assets</td></tr>
+<tr><td></td><td>.hdalc</td><td>Houdini Digital Assets limited commercial</td></tr>
 </tbody></table>
 </div><div style="break-before: page; page-break-before: always;"></div><h1 id="hda"><a class="header" href="#hda">HDA</a></h1>
 <p>Houdini Digital Assets</p>
+<div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
+<tr><td>저장</td><td>Save Node Type</td></tr>
+<tr><td>락 풀기</td><td>Allow Editing of Contents</td></tr>
+<tr><td>락 걸기</td><td>Match Current Definition (주의 Revert와 같은거. Save Node Type 필수)</td></tr>
+<tr><td>속성 편집</td><td>Type Properties  (주의 Edit Parameter Interface는 HDA가 아닌 해당 노드만 수정함)</td></tr>
+</tbody></table>
+</div>
 <ul>
-<li><a href="https://www.youtube.com/watch?v=eS1Zob0NWbY">Introduction to HDA (Houdini Digital Asset) in Unreal Engine UE4 &amp; Houdini for Beginners</a></li>
-<li><a href="https://www.youtube.com/playlist?list=PLd959VTYXCB551P4atiY52iA14JyLsaI7">Foundation Module - All Lecture Series</a>
+<li>
+<p>파라미터 필드 추가 단축키</p>
+<ul>
+<li>alt + 마우스 중간 쿨릭</li>
+</ul>
+</li>
+<li>
+<p><a href="https://www.youtube.com/watch?v=eS1Zob0NWbY">Introduction to HDA (Houdini Digital Asset) in Unreal Engine UE4 &amp; Houdini for Beginners</a></p>
+</li>
+<li>
+<p><a href="https://www.youtube.com/playlist?list=PLd959VTYXCB551P4atiY52iA14JyLsaI7">Foundation Module - All Lecture Series</a></p>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=xz3Vvy5X58U">HOUDINI 101 - 09 - Digital Assets &amp; Unreal</a></li>
 <li><a href="https://ehoudiniacademy.com/foundation/">https://ehoudiniacademy.com/foundation/</a></li>
@@ -900,6 +927,205 @@ Settings
 <li>
 <p>유니티 엔진에서 후디니 엔진과 통신하는 것이므로 에디트모드일때만 동작한다.</p>
 </li>
+<li>
+<p>https://www.sidefx.com/docs/houdini/unity/attributes.html</p>
+</li>
+<li>
+<p>https://www.sidefx.com/docs/houdini/unity/meshes.html</p>
+</li>
+<li>
+<p>https://www.sidefx.com/docs/houdini/unity/instancing.html</p>
+</li>
+</ul>
+<h2 id="-1"><a class="header" href="#-1"></a></h2>
+<div class="table-wrapper"><table><thead><tr><th>attr</th><th></th></tr></thead><tbody>
+<tr><td>unity_instance</td><td>point찍고 attr에 프리팝 경로 입력하면 알아서 생성해줌</td></tr>
+</tbody></table>
+</div>
+<h2 id="learn--learning-paths--unity"><a class="header" href="#learn--learning-paths--unity"><a href="https://www.sidefx.com/learn/unity">Learn &gt; Learning Paths &gt; Unity</a></a></h2>
+<h3 id="start-here"><a class="header" href="#start-here">START HERE</a></h3>
+<ul>
+<li><a href="https://www.sidefx.com/tutorials/unity-starter-kit/">UNITY STARTER KIT</a>
+<ul>
+<li>여러 툴들 소계</li>
+</ul>
+</li>
+<li><a href="https://www.sidefx.com/tutorials/getting-started-with-houdini-engine-for-unity/">GETTING STARTED WITH HOUDINI ENGINE FOR UNITY</a>
+<ul>
+<li>육각형 지형, HDA 생성, unity_instance</li>
+<li>Attribute Create</li>
+<li>Attribute Randomize</li>
+</ul>
+</li>
+<li><a href="https://www.sidefx.com/tutorials/houdini-engine-for-unity-instancing/">HOUDINI ENGINE FOR UNITY | INSTANCING &amp; VARIATION</a>
+<ul>
+<li>Scatter and Align 로 뿌려넣고 unity_instance로 소환</li>
+<li>Attribute Randomize
+<ul>
+<li>Options / Global Seed</li>
+</ul>
+</li>
+<li>Parameter Description / Type: String / Tags / TagName: heuassetpath 로 엔진파라미터로 프리팹 받을 수 있도록 설정.</li>
+</ul>
+</li>
+<li><a href="https://www.sidefx.com/tutorials/houdini-engine-for-unity-session-sync/">HOUDINI ENGINE FOR UNITY | SESSION SYNC</a>
+<ul>
+<li>https://www.sidefx.com/docs/houdini/ref/panes/enginesessionsync.html</li>
+<li>Houdini &gt; New Pane Tab Type &gt; Misc &gt; Houdini Engine SessionSync &gt; Start</li>
+<li>Unity &gt; Houdini Engine &gt; Session Sync &gt; Connect to Houdini</li>
+<li>유니티에서 hda 불러오면, 후디니에서도 보기 가능</li>
+<li>유니티에서 New Node를 생성하면, 후디니에서도 생성됨. 후디니에서 편집가능.
+<ul>
+<li>유니티에서 Save Node로 저장하면 .hess(<code>H</code>oudini <code>E</code>ngine <code>S</code>ession<code>S</code>ync)</li>
+<li>유니티에서 Load NodeSync로 불러오기 가능.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="https://www.sidefx.com/tutorials/games-quickstart/">GAMES QUICKSTART</a>
+<ul>
+<li>간단한 모델링, 그루핑, 어트리뷰트, HDA, Curve</li>
+<li>Desktop 설정</li>
+<li>단축키 C
+<ul>
+<li><a href="https://www.sidefx.com/tutorials/hotkeys/">HOTKEYS</a></li>
+</ul>
+</li>
+<li>node
+<ul>
+<li>Poly Extrude</li>
+<li>Poly Bevel</li>
+<li>Poly Split</li>
+<li>Bend</li>
+<li>Edit</li>
+<li>Fuse</li>
+<li>Resample</li>
+<li>Copy To Point</li>
+<li>Orientation Along Curve // Curve에서 각도 유지
+<ul>
+<li>파라미터 조정을 통해 사슬과 같은 효과를 낼 수 있다.</li>
+</ul>
+</li>
+<li>Copy To Curve == Orientation Along Curve + Copy To Point</li>
+<li>Draw Curve // 축 기반으로 그리거나, 매쉬에 그릴 수 있음.</li>
+<li>Match Size // 중점 이동</li>
+<li>Trace // Traces curves from an image file or heightfield.</li>
+</ul>
+</li>
+<li>Group
+<ul>
+<li>Group</li>
+<li>Group by Range // with Tube, Poly Extrude</li>
+<li>Group Combine</li>
+<li>Group Promote</li>
+</ul>
+</li>
+<li>Attribute
+<ul>
+<li>Attribute Create</li>
+<li>Attribute Noise // Cd, scale, N, pscale</li>
+<li>Attribute Randomize</li>
+<li>Attribute Promote</li>
+</ul>
+</li>
+<li>6 | MAKE GAME-READY ASSETS
+<ul>
+<li>1
+<ul>
+<li>File</li>
+<li>Labs Game Res // Reduce, Auto UV, Bake</li>
+<li>ROP FBX Output</li>
+</ul>
+</li>
+<li>2
+<ul>
+<li>Poly Reduce</li>
+<li>Auto UV</li>
+<li>Soften Normals</li>
+<li>Labs Map Baker</li>
+</ul>
+</li>
+<li>블록 모서리 깍인 효과
+<ul>
+<li>Attribute Noise - pscale</li>
+<li>Poly Bevel
+<ul>
+<li>Ignore Flat Edges</li>
+<li>Scale By Attribute</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="https://www.sidefx.com/tutorials/houdini-digital-assets/">HOUDINI DIGITAL ASSETS</a>
+<ul>
+<li>사슬
+<ul>
+<li>Draw Curve - Resample - CopyToCurve
+<ul>
+<li>Apply Yaw
+<ul>
+<li>Yaw: 90</li>
+</ul>
+</li>
+<li>Apply Roll or Twist
+<ul>
+<li>Full Twists: 7</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>팬스
+<ul>
+<li>노드
+<ul>
+<li>output, color</li>
+<li>Point Jitter로 변형 (crooked)</li>
+<li>Poly Bevel - Round</li>
+<li>Attribute Noise - scale 로 높이조정</li>
+<li>Attribute Noise - N 로 흩으러짐(회전) 효과</li>
+<li>Distance Along Geometry
+<ul>
+<li>Output Mask로 Ramp값을 할당</li>
+</ul>
+</li>
+<li>Attribute VOP
+<ul>
+<li>Import Point Attribute - mask</li>
+<li>변형주고 scale에 할당.</li>
+</ul>
+</li>
+<li>Labs Color Gradient로 y축 기반 색상 지정.</li>
+<li>Copy To Curve
+<ul>
+<li>Target Type: Next Edge로 이어진 팬스</li>
+<li>Target Up Vector 조절로 뒤집힘 방지.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>HDA
+<ul>
+<li>Parameter</li>
+<li>Match Current Definition</li>
+</ul>
+</li>
+<li>vex: ch</li>
+</ul>
+</li>
+<li>Type Properties &gt; Node &gt; Guide Geometry
+<ul>
+<li>가이드라인으로 와이어 프레임으로 보여짐.</li>
+<li>Switch추가로 Toggle하여 사용</li>
+</ul>
+</li>
+</ul>
+</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="unreal"><a class="header" href="#unreal">Unreal</a></h1>
 <ul>
@@ -1077,7 +1303,7 @@ Settings
 </li>
 <li>https://www.pluralsight.com/courses/houdini-engine-unity-fundamentals</li>
 </ul>
-<h2 id="-1"><a class="header" href="#-1">???</a></h2>
+<h2 id="-2"><a class="header" href="#-2">???</a></h2>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=YMOGLxNs0Jk">Houdini Tutorial Edge Damage</a></li>
 <li><a href="https://houdinist.tistory.com/category/%ED%9B%84%EB%94%94%EB%8B%88%20%ED%8A%9C%ED%86%A0%EB%A6%AC%EC%96%BC%20%EC%86%8C%EA%B0%9C">https://houdinist.tistory.com/category/후디니%20튜토리얼%20소개</a></li>
