deploy: be562de06cd34ea7a4dbfee7136cb4d30508c9bd

--- a/file/file.html
+++ b/file/file.html
@@ -180,13 +180,30 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="파일"><a class="header" href="#파일">파일</a></h1>
-<div class="table-wrapper"><table><thead><tr><th>분류</th><th>확장자명</th><th>설명</th></tr></thead><tbody>
-<tr><td>씬파일</td><td>.hip</td><td>Houdini Independent Package</td></tr>
-<tr><td></td><td>.hipnc</td><td>Houdini Independent Package Non-Commercial</td></tr>
-<tr><td>에셋</td><td>.hda</td><td>Houdini Digital Assets</td></tr>
-<tr><td></td><td>.hdalc</td><td>Houdini Digital Assets limited commercial</td></tr>
+<div class="table-wrapper"><table><thead><tr><th>분류</th><th>확장자명</th><th>설명</th><th>LICENSE</th></tr></thead><tbody>
+<tr><td>씬파일</td><td>.hip</td><td><code>H</code>oudini <code>I</code>ndependent <code>P</code>ackage</td><td></td></tr>
+<tr><td></td><td>.hiplc</td><td>Houdini Independent Package Limited Commercial</td><td>INDIE</td></tr>
+<tr><td></td><td>.hipnc</td><td>Houdini Independent Package Non-Commercial</td><td>EDUCATION / APPRENTICE</td></tr>
+<tr><td>에셋</td><td>.hda</td><td><code>H</code>oudini <code>D</code>igital <code>A</code>ssets</td><td></td></tr>
+<tr><td></td><td>.hdalc</td><td>Houdini Digital Assets Limited Commercial</td><td>INDIE</td></tr>
+<tr><td></td><td>.hipnc</td><td>Houdini Digital Assets Non-Commercial</td><td>EDUCATION / APPRENTICE</td></tr>
+<tr><td>세션</td><td>.hess</td><td><code>H</code>oudini <code>E</code>ngine <code>S</code>ession<code>S</code>ync</td><td></td></tr>
 </tbody></table>
 </div>
+<ul>
+<li>https://www.sidefx.com/faq/question/houdini-engine-plugin-free-for-unity-and-ue4/</li>
+</ul>
+<div class="table-wrapper"><table><thead><tr><th>HOUDINI ENGINE</th><th></th><th></th></tr></thead><tbody>
+<tr><td>for Unity/Unreal</td><td>.hda</td><td>최대 10개</td></tr>
+<tr><td>INDIE</td><td>.hda .hdalc</td><td>최대 3대</td></tr>
+<tr><td>EDUCATION</td><td>.hda .hdalc .hdanc</td><td></td></tr>
+<tr><td>APPRENTICE</td><td>X</td><td></td></tr>
+</tbody></table>
+</div>
+<p>https://www.sidefx.com/docs/houdini/unity/
+https://github.com/sideeffects/HoudiniEngineForUnity
+https://www.sidefx.com/download/daily-builds/</p>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
